# DaatLocus

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING_zh-CN.md  Cargo.toml  README.md  README_zh-CN.md  TODO.md  build.rs  deny.toml  tmp_next_todo.md  tmp_todo.md  todo.md
.github/workflows/: ci.yml  hindsight-sidecars.yml  release-binaries.yml
assets/hindsight-sidecars/: README.md
crates/daat-locus-launcher/: Cargo.toml
crates/daat-locus-launcher/src/: main.rs
crates/daat-locus-macros/: Cargo.toml
crates/daat-locus-macros/src/: lib.rs
crates/scope-engine/: Cargo.toml  README.md  USAGE.md
crates/scope-engine/src/: analyzer.rs  api.rs  engine.rs  lib.rs  lsp.rs  main.rs  patch.rs  selector.rs  server.rs  state.rs  treesitter.rs  usage.rs
crates/scope-engine/src/language/: c.rs  cpp.rs  go.rs  mod.rs  php.rs  ruby.rs  rust.rs  typescript.rs
docs/: README_zh-CN.md  architecture.md  architecture_zh-CN.md  configuration.md  configuration_zh-CN.md  license-attribution.md  model-catalog.md  release-checklist.md  sandbox-backend-selection.md
hindsight-sidecar/: api_entry.py  embed_entry.py  hindsight-embed.spec
locales/: en-US.yml  zh-CN.yml
packaging/macos/: Info.plist
packaging/windows/: daat-locus.wxs
prompts/: program-skill-improvement-planner-instructions.md  program-skill-improvement-planner-system.md
prompts/apps/: browser.md  coding.md  terminal.md
prompts/persona/: default.md
prompts/system/: apps.md  core.md  event.md  plan.md  primitive.md  workspace.md
rules/: README.md  core.md  model-facing-schema.md  session-activity.md
rules/architecture/: config-readiness.md  manager-session-ipc.md  multi-session.md
rules/integrations/: telegram.md  third-party-apps.md
rules/maintenance/: anti-patterns.md  commits.md  design-checklist.md
rules/runtime/: context.md  model.md  objects.md  workflow-and-sleep.md
rules/tools/: app-semantics.md  file-and-coding-tools.md  tool-design.md
rules/ui/: slash-commands.md  tui-dashboard.md  webui-session.md
schemas/: config.schema.json
skills/: write-app.md  write-global-skill.md
skills/ask-clarifying-question/: SKILL.md
skills/author-workspace-app/: SKILL.md
skills/commit-and-push/: SKILL.md
skills/inspect-local-project/: SKILL.md
skills/inspect-repository-status/: SKILL.md
skills/modify-local-project/: SKILL.md
skills/report-result/: SKILL.md
skills/run-required-checks/: SKILL.md
skills/summarize-findings/: SKILL.md
src/: activity_event.rs  app.rs  apply_patch.rs  browser_app.rs  browser_device.rs  browser_install.rs  cli.rs  coding_app.rs  config.rs  config_setup.rs  config_wizard.rs  context.rs  context_budget.rs  core.rs  daat_locus_paths.rs  daemon_tray.rs  dashboard.rs  dashboard_render.rs  device.rs  device_tasks.rs  dsml_repair.rs  embeding.rs  emotion.rs  events.rs  hindsight.rs  hindsight_preprocess.rs  i18n.rs  live_progress.rs  logging.rs  main.rs  memory.rs  model_catalog.rs  obligation_queue.rs  obligations.rs  openskills.rs  pending_work.rs  persistence.rs  plan.rs  preturn_state.rs  projects.rs  (+25 more)
src/commands/: reset.rs
src/daemon/: auth.rs  logs.rs  mod.rs  session.rs  session_ipc.rs
src/dashboard/: command_flow.rs  command_input.rs  command_panels.rs  command_registry.rs  command_render.rs  command_text.rs  commands.rs  frame_profiler.rs  frame_requester.rs  history.rs  input_controller.rs  mod.rs  render.rs  renderable.rs  selection.rs  terminal_hyperlinks.rs  transcript_overlay.rs  tui_animation.rs  tui_event.rs  tui_perf.rs  view_state.rs
src/dashboard/cells/: apps.rs  common.rs  exec.rs  highlight.rs  markdown.rs  messages.rs  mod.rs  plan.rs  primitive.rs  primitives.rs  tui.rs  web_activity.rs  workflow.rs
src/hindsight/: env.rs  llm_proxy.rs  managed.rs  mod.rs  preprocess.rs
src/providers/: codex_oauth.rs  copilot.rs  io.rs  ollama.rs  payload.rs  responses_compat.rs  thinking.rs
src/reasoning/: compiled.rs  dataset_store.rs  environment.rs  episode.rs  episode_harness.rs  eval.rs  evaluation_artifacts.rs  examples.rs  frontier.rs  ir.rs  judge.rs  mod.rs  optimize.rs  optimizer.rs  program.rs  prompt_assembler.rs  prompt_doc.rs  prompt_renderer.rs  prompt_text.rs  prompts.rs  proposer.rs  runtime.rs  runtime_error.rs  runtime_policy.rs  runtime_review.rs  selection.rs  signature.rs  sleep.rs  sleep_artifacts.rs  teleprompter.rs  trace.rs  trace_mining.rs  turn_compile.rs
src/reasoning/adapters/: mod.rs  swe_train_source.rs
src/reasoning/bench/: eval.rs  mod.rs  optimize.rs  proposer.rs
src/reasoning/datasets/: action_phase.json  action_phase.rs  mod.rs  resolve_telegram.json  resolve_telegram.rs
src/reasoning/programs/: action_phase.rs  action_phase_common.rs  attend_notifications.rs  completion_judge.rs  evaluation_artifact_builder.rs  execute_task.rs  explore_new_tasks.rs  memory_encoding.rs  mod.rs  pairwise_judge.rs  plan_from_project.rs  prompt_candidate_replay_judge.rs  prompt_evolution_planner.rs  resolve_telegram.rs  runtime_error_correction_planner.rs  runtime_retain_preprocessor.rs  runtime_system_prompt_judge.rs  (+16 more)
src/runtime/: bootstrap.rs  daemon_server.rs  mod.rs  patch_tool.rs  runtime_loop.rs  scope_client.rs  scope_engine.rs  session_server.rs  session_title.rs
src/runtime_tools/: browser.rs  files.rs  mod.rs  telegram.rs  terminal.rs  work.rs
src/sandbox/: linux.rs  macos.rs  mod.rs  windows.rs
src/telegram_transport/: mod.rs  state.rs
src/terminal_app/: mod.rs  process.rs
src/workspace_app/: client.rs  mod.rs  paths.rs  protocol.rs  worker.rs
train_sources/: README.md  swe_bench_train_sample.json
webui/: .pnp.cjs  components.json  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
webui/src/: App.tsx  index.css  main.tsx
webui/tests/: agent-chat-folding.test.ts
workflows/: README.md  ask-clarifying-question.md  author-workspace-app.md  commit-and-push.md  edit-workspace-workflow.md  inspect-local-project.md  inspect-repository-status.md  modify-local-project.md  report-result.md  run-required-checks.md  summarize-findings.md
xtask/: Cargo.toml
xtask/src/: main.rs
(+64 files in other folders)
