[package]
name = "daat-locus"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["shadow3 <shadow3aaaa@gmail.com>"]

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["ws"] }
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
diffy = "0.4.2"
futures-util = "0.3.31"
libc = "0.2"
md-5 = "0.10.6"
miette = { version = "7.6.0", features = ["fancy"] }
mlua = { version = "0.11.4", features = ["lua54", "vendored", "serde"] }
notify = "8.2.0"
parking_lot = "0.12.5"
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "stream", "multipart"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
syntect = "5"
sysinfo = "0.38.4"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
toml = "1.0.6"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
two-face = { version = "0.5", default-features = false, features = ["syntect-default-onig"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
viewpoint-core = "0.4"
flate2 = "1"
tar = "0.4"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
rust-i18n = "4.0.0"

[dev-dependencies]
tempfile = "3.23.0"
