[package]
name = "daat-locus"
version = "0.1.1"
edition = "2024"
description = "A long-running local agent runtime with memory, workflows, apps, and sleep-time self-improvement."
license = "Apache-2.0"
authors = ["shadow3 <shadow3aaaa@gmail.com>"]
repository = "https://github.com/shadow3aaa/DaatLocus"
readme = "README.md"
keywords = ["agent", "runtime", "workflow", "memory"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README_zh-CN.md",
    "/assets/logo.svg",
    "/build.rs",
    "/docs/**",
    "/locales/**",
    "/prompts/**",
    "/src/**",
    "/webui/.yarnrc.yml",
    "/webui/components.json",
    "/webui/index.html",
    "/webui/package.json",
    "/webui/src/**",
    "/webui/tailwind.config.cjs",
    "/webui/tsconfig.json",
    "/webui/vite.config.ts",
    "/webui/yarn.lock",
    "/workflows/**",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.tar.zst"
pkg-fmt = "tzstd"
bin-dir = "{ name }-{ version }-{ target }/{ bin }{ binary-ext }"
disabled-strategies = ["quick-install", "compile"]

[workspace]
members = [".", "xtask", "crates/scope-engine"]
default-members = ["."]
resolver = "3"

[features]
default = []
tui-perf-cmd = []

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["ws"] }
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.5.38", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
diffy = "0.4.2"
futures-util = "0.3.31"
include_dir = "0.7.4"
libc = "0.2"
md-5 = "0.10.6"
miette = { version = "7.6.0", features = ["fancy"] }
mlua = { version = "0.11.4", features = ["lua54", "vendored", "serde"] }
notify = "8.2.0"
parking_lot = "0.12.5"
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
tui-markdown = "0.3"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "stream", "multipart", "blocking"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
syntect = "5"
sysinfo = "0.38.4"
textwrap = "0.16"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
toml = "1.0.6"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
two-face = { version = "0.5", default-features = false, features = ["syntect-default-onig"] }
unicode-width = "0.2"
uuid = { version = "1.22.0", features = ["serde", "v4"] }
viewpoint-core = "0.4"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
rust-i18n = "4.0.0"
regex = "1.12.3"
tokio-stream = "0.1.18"
scope-engine = { version = "0.1.0", path = "crates/scope-engine" }
interprocess = { version = "2.4.2", features = ["tokio"] }

[dev-dependencies]
tempfile = "3.23.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Environment",
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 's'
strip = true
