[package]
name = "daat-locus"
version = "0.2.0"
edition = "2024"
description = "A long-running local agent runtime with memory, workflows, apps, and sleep-time self-improvement."
license = "Apache-2.0"
authors = ["shadow3 <shadow3aaaa@gmail.com>"]
repository = "https://github.com/shadow3aaa/DaatLocus"
readme = "README.md"
keywords = ["agent", "runtime", "workflow", "memory"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README_zh-CN.md",
    "/assets/logo.svg",
    "/assets/preview-tui.png",
    "/assets/preview-webui.png",
    "/assets/icon.png",
    "/assets/models-dev-api.json",
    "/build.rs",
    "/docs/**",
    "/locales/**",
    "/prompts/**",
    "/src/**",
    "/webui/bun.lock",
    "/webui/components.json",
    "/webui/index.html",
    "/webui/package.json",
    "/webui/src/**",
    "/webui/tailwind.config.cjs",
    "/webui/tsconfig.json",
    "/webui/vite.config.ts",
    "/workflows/**",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.tar.zst"
pkg-fmt = "tzstd"
bin-dir = "{ name }-{ version }-{ target }/{ bin }{ binary-ext }"
disabled-strategies = ["quick-install", "compile"]

[workspace]
members = [
    ".",
    "xtask",
    "crates/scope-engine",
    "crates/daat-locus-macros",
    "crates/daat-locus-launcher",
]
default-members = ["."]
resolver = "3"

[features]
default = []
tui-perf-cmd = []

[dependencies]
hex = "0.4.3"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["ws"] }
base64 = "0.22.1"
chrono = "0.4.45"
clap = { version = "4.5.38", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
diffy = "0.5.0"
futures-util = "0.3.31"
include_dir = "0.7.4"
libc = "0.2"
md-5 = "0.11.0"
miette = { version = "7.6.0", features = ["fancy"] }
mlua = { version = "0.11.4", features = ["lua54", "vendored", "serde"] }
notify = "8.2.0"
parking_lot = "0.12.5"
png = "0.18.1"
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
pulldown-cmark = "0.13.4"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
reqwest = { version = "0.13.2", features = [
    "json",
    "stream",
    "multipart",
    "blocking",
] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_path_to_error = "0.1.20"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
syntect = "5"
supports-color = "3.0.2"
sysinfo = "0.39.5"
textwrap = "0.16"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
toml = "1.1.2"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
two-face = { version = "0.5", default-features = false, features = [
    "syntect-default-onig",
] }
unicode-width = "0.2"
uuid = { version = "1.23.4", features = ["serde", "v4"] }
viewpoint-core = "0.4"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
rust-i18n = "4.1.0"
regex = "1.12.4"
tokio-stream = "0.1.18"
scope-engine = { version = "0.1.0", path = "crates/scope-engine" }
interprocess = { version = "2.4.2", features = ["tokio"] }
daat-locus-macros = { version = "0.1.0", path = "crates/daat-locus-macros" }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tao = "0.35.3"
tray-icon = { version = "0.24.1", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
tao = "0.35.3"
tray-icon = { version = "0.24.1", default-features = false, features = ["gtk"] }

[dev-dependencies]
tempfile = "3.23.0"
[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Environment",
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 's'
strip = true
