[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
flate2 = "1"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tar = "0.4"
toml = "1.0.6"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
zstd = { version = "0.13", features = ["zstdmt"] }
