[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
ico = "0.5.0"
png = "0.18.1"
resvg = { version = "0.47.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4"
toml = "1.1.2"
zstd = { version = "0.13", features = ["zstdmt"] }
