[package]
name = "scope-engine"
version = "0.1.0"
edition = "2024"
description = "Semantic Code Operation & Propagation Engine"
license = "Apache-2.0"
authors = ["shadow3 <shadow3aaaa@gmail.com>"]

[dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.25"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.23.4"
tree-sitter-go = "0.23.4"
tree-sitter-typescript = "0.23.2"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking"], optional = true }

[features]
default = ["download-ra"]
download-ra = ["dep:reqwest"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
