[package]
name = "scope-engine"
version = "0.1.0"
edition = "2024"
description = "Semantic Code Operation & Propagation Engine"
readme = "README.md"
license = "Apache-2.0"
authors = ["shadow3 <shadow3aaaa@gmail.com>"]

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
tree-sitter = "0.25"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
sha2 = "0.10"
schemars = "1.2.1"
dirs = "6"
globset = "0.4"
ignore = "0.4"
regex = "1.12.4"
reqwest = { version = "0.13", features = ["blocking"], optional = true }

[features]
default = ["download-ra"]
download-ra = ["dep:reqwest"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
